examples/test/testpolicy14835.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14835
  namespace: namespace381
spec:
  podSelector:
    matchLabels:
      key45: value22
      key24: value22
      key48: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value43
      podSelector:
        matchLabels:
          key24: value45
          key36: value47
          key12: value3
